# LODP48K

./: .gitignore  CMakeLists.txt  README.md
assets/: assets.aseprite  enemy.aseprite  hero.aseprite
assets/rooms/: room_001.aseprite  room_002.aseprite  room_003.aseprite  room_004.aseprite  room_005.aseprite  room_006.aseprite  room_007.aseprite  room_008.aseprite  room_009.aseprite  room_010.aseprite  room_011.aseprite  room_012.aseprite
src/: bullet.c  bullet.h  direction.h  enemy.c  enemy.h  game.c  game.h  input.c  input.h  main.c  player.c  player.h  raycast.c  raycast.h  renderer.c  renderer.h  room.c  room.h
tools/common/: bmp.c  bmp.h  writer.c  writer.h
tools/room2c/: CMakeLists.txt  main.c
tools/sprite2c/: CMakeLists.txt  assets.h  main.c
